--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
 .App {
   text-align: center;
+  /* overflow: hidden; */
 }
-
+body{
+  /* overflow: hidden; */
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -28,11 +31,54 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.box{
+  width:100%;
+  height:600px;
+
 }
+
+.header{
+background-color: yellow;
+}
+.content{
+  background-color: skyblue;
+  }
+  .hero{
+    background-color: pink;
+    }
+
+
+
+.section1{
+  /* border:1px solid red; */
+  width:100%;
+  height:100vh;
+  background-color: black;
+}
+
+
+.section2{
+  border:1px solid pink;
+  width:100%;
+  /* margin-top: 1rem; */
+  /* height:500px; */
+  background-color: pink;
+  overflow: hidden;
+}
+
+
+.section3{
+  border:1px solid pink;
+  width:100%;
+  /* margin-top: 1rem; */
+  /* height:500px; */
+  background-color: pink;
+  overflow: hidden;
+}
+
+
+/* .section4{
+  border:1px solid red;
+  background-color: lightcoral;
+
+} */
